# kb-mocker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/kb_mocker/: config.py
src/kb_mocker/api/: routes.py
src/kb_mocker/chains/: qa_chain.py
src/kb_mocker/tools/: knowledge.py
